# CrewAI_Exploration

./: README.md
crewai_exploration/: crew.py  main.py
crewai_exploration_4/: README.md  pyproject.toml  report.md  report2.md
crewai_exploration_4/src/crewai_exploration_4/: crew.py  main.py
crewai_exploration_4/src/crewai_exploration_4/config/: agents.yaml  tasks.yaml
