[project]
name = "crewai_exploration_4"
version = "0.1.0"
description = "CrewAI_Exploration_4 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
   "crewai[tools]>=0.80.0,<1.0.0",
   "onnxruntime==1.15.0",
   "socksio>=1.0.0",
   "pyarrow==17.0.0",
]

[project.scripts]
crewai_exploration_4 = "crewai_exploration_4.main:run"
run_crew = "crewai_exploration_4.main:run"
train = "crewai_exploration_4.main:train"
replay = "crewai_exploration_4.main:replay"
test = "crewai_exploration_4.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
